# rust-wasm-sand

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  snowpack.config.js
js/: index.js
src/lib/: dyn_store.rs  input.rs  main.rs  physics.rs  render.rs  sand.rs  util.rs  wasm.rs  webgl.rs
src/shaders/: fragment.glsl  vertex.glsl
static/: index.html
