[package]
name = "rust-wasm-sand"
version = "0.1.0"
edition = "2021"

[lib]
name = "sand_game"
crate-type = ["cdylib", "rlib"]
path = "src/lib/main.rs"

[dependencies]
wasm-bindgen = "0.2.*"
js-sys = "0.3.*"
getrandom = { version = "0.2.*", features = ["js"] }
rand = "0.8.*"
[dependencies.web-sys]
version = "0.3.*"
features = [
    "console", "HtmlCanvasElement",
    "WebGl2RenderingContext", "WebGlShader", "WebGlProgram",
    "WebGlBuffer", "WebGlUniformLocation", "WebGlTexture", "WebGlSampler"
]

[profile.release]
opt-level = "s" # small codesize optimization